--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires = ["poetry-core>=1.0.0"]
 
 [tool.poetry.scripts]
 plot-aberration = "zernike.apps.plot_aberration:main"
+estimate-beam = "zernike.apps.estimate_beam:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10, <3.12"
